// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`changeAttributeFilterModeHandler > should emit the appropriate events for changed attribute filter mode 1`] = `
[
  {
    "commandType": "GDC.DASH/CMD.ATTRIBUTE_FILTER_CONFIG.SET_MODE",
    "correlationId": undefined,
    "type": "GDC.DASH/EVT.COMMAND.STARTED",
  },
  {
    "correlationId": undefined,
    "type": "GDC.DASH/EVT.ATTRIBUTE_FILTER_CONFIG.MODE_CHANGED",
  },
  {
    "correlationId": undefined,
    "type": "GDC.DASH/EVT.FILTER_CONTEXT.CHANGED",
  },
]
`;

exports[`changeAttributeFilterModeHandler > should emit the appropriate events when trying to update mode of a non-existent attribute filter 1`] = `
[
  {
    "commandType": "GDC.DASH/CMD.ATTRIBUTE_FILTER_CONFIG.SET_MODE",
    "correlationId": undefined,
    "type": "GDC.DASH/EVT.COMMAND.STARTED",
  },
  {
    "correlationId": undefined,
    "type": "GDC.DASH/EVT.COMMAND.FAILED",
  },
]
`;

exports[`changeAttributeFilterModeHandler > should set the attribute mode in state on changed attribute filter 1`] = `
[
  {
    "localIdentifier": "8dd5d9818c5d45198cef0faa652b202b",
    "mode": "active",
  },
]
`;
